# LLM-3D

./: README.md  pyproject.toml  setup.ps1  setup.sh
3dprintagent/src/printagent/: crew.py  main.py
3dprintagent/src/printagent/config/: agents.yaml  tasks.yaml
3dprintagent/src/printagent/tools/: custom_tool.py
3dprintagent/src/printagent/tools/communicate/: makerequests.py
src/: crew.py
src/config/: agents.yaml  tasks.yaml
src/tools/: custom_tool.py
