[project]
name = "3dprintagent"
version = "0.1.0"
description = "3dprintagent using crewAI"
authors = [{ name = "Your Name", email = "you@example.com" }]
requires-python = ">=3.10,<3.13"
dependencies = [
    "crewai[tools]>=0.118.0,<1.0.0"
]

[project.scripts]
3dprintagent = "3dprintagent.main:run"
run_crew = "3dprintagent.main:run"
train = "3dprintagent.main:train"
replay = "3dprintagent.main:replay"
test = "3dprintagent.main:test"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.crewai]
type = "crew"
